[gd_scene load_steps=3 format=3 uid="uid://ky4chq16wqx7"]

[ext_resource type="Script" path="res://scripts/new_game_settings.gd" id="1_agdcs"]
[ext_resource type="Theme" uid="uid://cpxd0rm5wk0ep" path="res://scenes/main_theme.tres" id="2_rsy0a"]

[node name="new_game_settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_agdcs")

[node name="background" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.443137)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="background2" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.772549)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 47.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 64.0
offset_right = 12.0
offset_bottom = -83.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_rsy0a")
theme_override_colors/default_color = Color(0.901961, 0.901961, 0.901961, 1)
theme_override_font_sizes/normal_font_size = 8
text = "Select game difficulty level."

[node name="normal_button" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.229
anchor_top = 0.522
anchor_right = 0.423
anchor_bottom = 0.587
offset_left = 0.0799942
offset_top = -0.0400085
offset_right = -0.0400085
offset_bottom = 0.160004
color = Color(0, 0.054902, 0.282353, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="normal_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 2.0
offset_right = -4.44
offset_bottom = -0.600006
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_rsy0a")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 6
text = "Normal"

[node name="expert_button" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.479
anchor_top = 0.522
anchor_right = 0.673
anchor_bottom = 0.587
offset_left = 0.0799866
offset_top = -0.0400085
offset_right = -0.0400085
offset_bottom = 0.160004
color = Color(0, 0.054902, 0.282353, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="expert_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 2.0
offset_right = -3.43999
offset_bottom = -0.600006
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_rsy0a")
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 6
text = "Expert"

[node name="border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.019
anchor_bottom = 0.248
offset_left = -0.879999
offset_top = 76.0
offset_right = 489.0
offset_bottom = -0.360001
color = Color(0.180392, 0.407843, 0.560784, 1)

[node name="border2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.019
anchor_bottom = 0.248
offset_left = -0.879999
offset_top = 198.0
offset_right = 489.0
offset_bottom = 121.64
color = Color(0.180392, 0.407843, 0.560784, 1)

[node name="sfx" type="AudioStreamPlayer" parent="."]

[connection signal="finished" from="sfx" to="." method="_on_sfx_finished"]
